fix: attest packaged JSON Logic corpus (#20)